# goit-pythonweb-hw-12

./: docker-compose.yaml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 561caec963c0_add_user_role.py  89e39b032b42_add_user_email.py  ce19e9885087_add_user.py
docs/: conf.py  index.rst
src/api/: auth.py  contacts.py  users.py  utils.py
src/config/: config.py
src/db/: db.py
src/db/models/: base.py  contact.py  user.py
src/repository/: contacts.py  user.py
src/schemas/: contact.py  token.py  user.py
src/services/: auth.py  contacts.py  redis.py  upload_file.py  user.py
tests/: conftest.py
tests/api/: auth_integration_test.py  contacts_integration_test.py  users_integration_test.py  utils_test.py
tests/repository/: contacts_test.py  user_test.py
